--- a/template/home_template.html
+++ b/template/home_template.html
@@ -2,31 +2,31 @@
 <!DOCTYPE html>
 <html lang="en-IN" data-theme="dark">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content=" {{ config.get('desc') }} ">
-<title>{{ config.get('site-title') }}</title>
-<meta name="color-scheme" content="dark">
-<link rel="alternate" type="application/atom+xml" title="Recent blog posts" href="/rss.xml">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>{{ config.get('site-title') }}</title>
+	<link rel="shortcut icon" href="favicon.ico" />
+	<meta name="color-scheme" content="dark">
+	<meta name="description" content=" {{ config.get('desc') }} ">
+	<meta property="og:title" content="{{ config.get('site-title') }}">
+	<meta property="og:description" content=" {{ config.get('desc') }} ">
+	<meta property="og:image" content="{{ config.get('logo144') }}">
+	<meta property="og:url" content="https://rynz.de">
+	<meta name="twitter:card" content="summary_large_image">
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ config.get('css') }}" />
+  <link rel="alternate" type="application/atom+xml" title="Recent blog posts" href="/rss.xml">
 </head>
 <body>
 <header>
 {{ header }}
 </header>
-<section>
+<main>
 {{ article }}
-<ul>
-{% for post in posts %}
-  {% if (post.showInHome is undefined) or post.showInHome %}
-    <li><a href="{{ post.url }}">{{ post.title | lower }}</a>: {{ post.subtitle | lower }}</li>
-  {% endif %}
-{% endfor %}
-{% if nextpage %} <a href="{{ nextpage }}">Older Notes >> </a> {% endif %}
-</ul>
-</section>
+</main>
 <footer>
 {{ footer }}
 </footer>
+<script defer src="rynz.js"></script>
 </body>
 </html>
